WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
37384
[Haiku] Fix build of ImageHaiku.cpp
https://bugs.webkit.org/show_bug.cgi?id=37384
Summary
[Haiku] Fix build of ImageHaiku.cpp
Stephan Aßmus
Reported
2010-04-10 04:55:13 PDT
Created
attachment 53035
[details]
Fix build of HaikuImage.cpp ImageHaiku.cpp needs to include SharedBuffer.h Due to a mix up caused by resolving merge conflicts, I accidentally landed a patch that used the wrong parameter name for the "phase".
Attachments
Fix build of HaikuImage.cpp
(1.87 KB, patch)
2010-04-10 04:55 PDT
,
Stephan Aßmus
commit-queue
: commit-queue-
Details
Formatted Diff
Diff
Fix build of ImageHaiku.cpp
(1.87 KB, patch)
2010-04-10 05:00 PDT
,
Stephan Aßmus
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
WebKit Commit Bot
Comment 1
2010-04-10 04:58:28 PDT
Comment on
attachment 53035
[details]
Fix build of HaikuImage.cpp Rejecting patch 53035 from commit-queue.
superstippi@gmx.de
does not have committer permissions according to
http://trac.webkit.org/browser/trunk/WebKitTools/Scripts/webkitpy/common/config/committers.py
. - If you do not have committer rights please read
http://webkit.org/coding/contributing.html
for instructions on how to use bugzilla flags. - If you have committer rights please correct the error in WebKitTools/Scripts/webkitpy/common/config/committers.py by adding yourself to the file (no review needed). Due to
bug 30084
the commit-queue will require a restart after your change. Please contact
eseidel@chromium.org
to request a commit-queue restart. After restart the commit-queue will correctly respect your committer rights.
Stephan Aßmus
Comment 2
2010-04-10 05:00:25 PDT
Created
attachment 53036
[details]
Fix build of ImageHaiku.cpp Forgot to replace the bug ID in the ChangeLog URL.
Eric Seidel (no email)
Comment 3
2010-04-10 14:15:41 PDT
Comment on
attachment 53036
[details]
Fix build of ImageHaiku.cpp OK.
WebKit Commit Bot
Comment 4
2010-04-10 14:31:03 PDT
Comment on
attachment 53036
[details]
Fix build of ImageHaiku.cpp Clearing flags on attachment: 53036 Committed
r57419
: <
http://trac.webkit.org/changeset/57419
>
WebKit Commit Bot
Comment 5
2010-04-10 14:31:08 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug